Change font weight  and color and fix issues
 text unreadable on iOS devices, so i change the font weight and color
and also fix a few issues with modals on iOS devices.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,9 @@ html, body{
 	min-height: 100%;
 	font-family: "Lato","tahoma","verdana","arial","sans-serif";
 	font-size: 16px;
-	font-weight:lighter;
+	font-weight:400;
 	letter-spacing:1.5px;
-	color:#adadad;
+	color:#8C8D8F;
 	background-color: #ededed;
 }
 
@@ -48,6 +48,7 @@ a:hover, a:visited, a:active {color: #FFFFFF; text-decoration: none;}
 }
 
 #img_congrats{
+	background-color: #008397;
 	background: url(../img/bg_congrats.jpg) center center no-repeat;
 	background-size:cover;
 }
